--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div id="gameOverScreen" class="hidden">
-        <h1>はいおまえシボウm9(^Д^)プギャーｗｗｗ</h1>
+        <h1>FAILED</h1>
         <button id="continueButton">CONTINUE (3)</button>
         <button id="restartButton">RESTART</button>
     </div>
